# verma

./: Pipfile  pyproject.toml
.github/workflows/: conventional-pr-title.yml  python-publish.yml  test.yml
verma/cli/: __init__.py  bump.py
verma/core/: __init__.py  builders.py  domain.py  enums.py  functions.py  models.py
verma/git/: utils.py
